# partybutton

./: .env.example  .gitignore  README.md  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: deploy.yaml
apps/web/: .dev.vars.example  drizzle.config.ts  index.html  package.json  tsconfig.node.json  worker-configuration.d.ts  wrangler.jsonc
apps/web/drizzle/: 0000_real_tempest.sql
apps/web/drizzle/meta/: 0000_snapshot.json  _journal.json
apps/web/src/: App.tsx  index.css
apps/web/worker/: index.ts  openapi.ts  rfc720.ts
apps/web/worker/db/: schema.ts
firmware/pico-partybutton/: .gitignore  Cargo.toml  README.md  build.rs  fetch-firmware.sh
firmware/pico-partybutton/.cargo/: config.toml
firmware/pico-partybutton/src/: main.rs
