[package]
name = "pico-partybutton"
version = "0.1.0"
edition = "2024"
resolver = "2"

[dependencies]
embassy-rp = { version = "0.10.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.5.1", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-net = { version = "0.9.1", features = ["defmt", "tcp", "udp", "dhcpv4", "medium-ethernet", "dns", "proto-ipv4"] }
cyw43 = { version = "0.7.0", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.10.0", features = ["defmt"] }

reqwless = { git = "https://github.com/drogue-iot/reqwless", rev = "68f703dfc16e6f7f964b7238c922c0d433118872", default-features = false, features = ["defmt", "embedded-tls"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-core = "0.5.1"

defmt = "1.0.1"
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
static_cell = "2.1"
portable-atomic = { version = "1.5", features = ["critical-section"] }

[profile.dev]
debug = 2
opt-level = 1

[profile.release]
debug = 2
lto = "fat"
opt-level = "s"
