[package]
name = "pico-partybutton"
version = "0.1.0"
edition = "2024"
resolver = "2"

[dependencies]
embassy-rp = { version = "0.10.0", features = ["unstable-pac", "time-driver", "critical-section-impl", "rp235xa", "binary-info"] }
embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread", "executor-interrupt"] }
embassy-time = { version = "0.5.1" }
embassy-net = { version = "0.9.1", features = ["tcp", "udp", "dhcpv4", "medium-ethernet", "dns", "proto-ipv4"] }
embassy-usb = "0.6.0"
embassy-usb-logger = "0.6.0"
cyw43 = "0.7.0"
cyw43-pio = "0.10.0"
log = "0.4"

reqwless = { git = "https://github.com/drogue-iot/reqwless", rev = "68f703dfc16e6f7f964b7238c922c0d433118872", default-features = false, features = ["log", "embedded-tls"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-core = "0.5.1"

panic-halt = "1.0"
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
static_cell = "2.1"
portable-atomic = { version = "1.5", features = ["critical-section"] }

[profile.dev]
debug = 2
opt-level = 1

[profile.release]
debug = 2
lto = "fat"
opt-level = "s"
